<resources>
    <string name="app_name">UpMobBank</string>
    <string name="editTextPhone">Phone</string>
    <string name="editTextPass">Password</string>
    <string name="buttonEnter">Enter</string>
    <string name="buttonRegist">Registration</string>

    <string name="formCreateAccount">Form for create account</string>
    <string name="inputFirstName">Input</string>
    <string name="inputLastName">Input</string>
    <string name="inputBirthDate">Input your birth date</string>
    <string name="inputPhone">Input your number of the phone</string>
    <string name="cretingPassword">Create the password</string>

    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="bithDate">dd.mm.yyyy</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="createAccount">create account</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="uaFragm">UA</string>
    <string name="usFragm">US</string>
    <string name="euFragm">EU</string>

    <string name="uaSymbol">₴</string>
    <string name="usSymbol">$</string>
    <string name="euSymbol">€</string>

    <string name="balanceUA">00.0</string>
    <string name="balanceUS">00.0</string>
    <string name="balanceEU">00.0</string>
    <string name="yourBalance">Your balance: </string>

    <string name="sendMoney">Send money</string>
    <string name="blocked">Blocked</string>
    <string name="unlocked">Unlocked</string>
    <string name="setings">Setings</string>

    <string name="send">Send</string>
    <string name="accountNumber">Account number:</string>


</resources>